# swe-twelve-factor-app

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  FACTORS.md  README.md  diesel.toml  dummy.rs  entrypoint.sh  haproxy.cfg
.github/workflows/: main.yml
migrations/2022-10-15-180542_create_db/: down.sql  up.sql
scripts/: dogorcat.service.curl.sh  dogorcat.service.postman_collection.json  twelve-factor-app.postman_collection.json
src/: main.rs
src/entities/: datasets.rs  image.rs  mod.rs  picture_upload.rs
src/errors/: app_error.rs  apperror.rs  db_error.rs  dberror.rs  mod.rs  route_error.rs  routeerror.rs  service_error.rs  serviceerror.rs  std_error.rs
src/repositories/: dataset_repository.rs  mod.rs  schema.rs  traits.rs
src/routes/: management.rs  mod.rs  service.rs
src/services/: image_classifier.rs  manager.rs  mod.rs  traits.rs
src/states/: app_state.rs  fairings.rs  mod.rs
src/utils/: zip.rs
