[package]
name = "twelve-factor-app"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono"] }
r2d2 = "0.8.1"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tensorflow = "0.19.1"
image = "0.24.4"
zip = "0.6.3"
uuid = { version = "1.2.1", features = ["v4"] }

[[bin]]
name = "twelve-factor-app"
path = "src/main.rs"